client/stylesheets/layouts/layout.less
@import '../utilities/helpers';
@import '../utilities/variables';

// layout styles

html {
  width: 100%;
  height: 100%;
  font-family: @font-family-base;

  body {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
    background: @background-color;

    // buttons

    .ui.button {

      &.primary {
        background: @primary-color;

        &:hover,
        &:focus {
          background: @highlight-color;
        }
      }
    }

    // layout

    .ui.layout {
      min-height: 100%;
      overflow: hidden;

      .yield {
        position: relative;
        overflow: hidden;
        height: 100%;
        padding: 2em 0;
        margin: 3em 0;
      }
    }
	}
}

